2005-12-16  Brent Smith  <gnome@nextreality.net>

	* src/yelp-utils.c: (get_doc_type):
	committed patch to make yelp accept mime-types application/xml
	and application/docbook+xml, courtesy of Dave Malcom.  Fixes
	critical issue, bug #324296

2005-12-14  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-db-pager.c: 
	Remove xslt from node_get_title, making yelp uber-quick

==================== 2.13.2 ====================

2005-12-12  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.13.2

2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	* data/ui/yelp-ui.xml: 
	* src/Makefile.am: 
	* src/Yelper.h: 
	* src/Yelper.cpp: 
	* src/yelp-db-print-pager.h: 
	* src/yelp-db-print-pager.c: 
	* src/yelp-gecko-services.h: 
	* src/yelp-gecko-services.cpp: 
	* src/yelp-html.cpp: 
	* src/yelp-html.h: 
	* src/yelp-main.c: 
	* src/yelp-print.c: 
	* src/yelp-print.h: 
	* src/yelp-window.c: 
	Add printing support
	
2005-12-11  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (yelp_toc_pager_init),
	(process_omf_pending), (add_man_page_to_toc),
	(create_manindex_file), (create_toc_from_index),
	(process_mandir_pending):
	* src/yelp-utils.c: (yelp_dot_dir), (yelp_doc_info_new),
	(yelp_doc_info_get), (convert_man_uri):
	* src/yelp-utils.h:
	* src/yelp-window.c: (yelp_window_load):
	Added support for an xml index file for man pages, which
	greatly improves startup time when man pages are enabled.

2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-html.cpp: 
	Only print in debug mode
	
2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c: 
	Fix minor compiler warning
	
2005-12-10  Don Scorgie  <dscorgie@cvs.gnome.org>

       * stylesheets/info2html.xsl:
       * src/yelp-utils.c:
       * src/yelp-io-channel.c:
       * src/yelp-info-parser.c:
       * src/yelp-info-pager.c:
       Improve info page support
       Support info menus
       Only dump output in debug mode